# embedded_blockchain

./: Cargo.toml  README.md  memory.x  openocd.gdb
.cargo/: config.toml
src/: app.rs  behviour.rs  block.rs  main.rs
