[package]
authors = ["Ghaith Oueslati", "Hassine Taouil", "Molka Kotti", "Dhiaa Mejdi", "Ahmed Zribi"]
edition = "2021"
readme = "README.md"
name = "embedded_blockchain"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
serde = { version="1.0.148", default-features=false, features=["derive"]}
numtoa = "0.2.4"
binascii = "0.1.4"
hex = { version="0.4.3", default-features=false }
alloc-cortex-m = "0.4.3"
serde_json = { version="1.0.89", default-features=false, features=["alloc"] }
sha1 = { version="0.10.5", default-features=false }
serde-json-core = "0.5.0"
panic-semihosting = "0.6.0"

# this lets you use `cargo fix`!
[[bin]]
name = "embedded_blockchain"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
